# pipecom

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pipecom/: __init__.py  _exceptions.py  _pipecom_posix.py  _pipecom_win.py  pipecom.py
src/pipecom_falaventho/: __init__.py  _exceptions.py  _pipecom_posix.py  _pipecom_win.py  pipecom.py
tests/: advanced.py  cleanup_pipes.py  readmetest.py  simple_chat.py  task_queue.py  test.py  test_interactive.py
