[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 78.1.0"]

[project]
authors = [
    {name="Falaventho"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    'pywin32 ; platform_system == "Windows"',
]
description = "An os-agnostic handler for string-based ipc via named pipes."
license = "MIT"
license-files = ["LICENSE"]
name = "pipecom"
readme = "README.md"
requires-python = ">=3.13"
version = "0.0.2"

[project.urls]
Homepage = "https://github.com/falaventho/pipecom"
Issues = "https://github.com/falaventho/pipecom/issues"